--- a/mainpage.html
+++ b/mainpage.html
@@ -90,34 +90,27 @@
         <button class="Alyssa-button Alyssa-gradient animate__animated animate__backInUp">Search!</button>
     </section>
     <section class="Alyssa-sec2">
-      <div class="container-fluid d-flex justify-content-center align-items-center">
-        <div class="row row-cols-1 row-cols-md-2">
-        <div class="col-mb-6 h-100 text-center">
-        <div class="Alyssa-jumbotext h-100">
-            <h1 class="Alyssa-bold">Like a Rising Comet!</h1>
-            <h1 class="Alyssa-bold">Great Games at Great Prices!</h1>
-            <p class="Alyssa-space">Video games are increasingly becoming a normality in our modern society. Video games
-                push our reflexes,
-                creativity, and thinking, and give us experiences that can hardly be found in our mundane lives.
+    <div class="container" style="margin: 0 auto;">
+    <div class="row">
+    <div class="col-sm">
+      <h1 class="Alyssa-bold">Like a Rising Comet!</h1>
+      <h1 class="Alyssa-bold">Great Games at Great Prices!</h1>
+      <p class="Alyssa-space">Video games are increasingly becoming a normality in our modern society. Video games push our reflexes, creativity, and thinking, and give us experiences that can hardly be found in our mundane lives.
+      Here at Comet Games Store, we are committed to giving you the best games possible, at the best pricespossible, with the best service possible.
+      </p>
+      <p>All of our items are purely DRM-free!</p>
+      <p>Sales every Wednesday and weekend!</p>
+      <p>Sales every 5th and 10th of the month!</p>
+      <p>Come down below and Get your favorite Video Games.</p>
+      <h2 class="text-danger" style="font-weight: 500; display:flex; justify-content: center;">COM-ET (Come-n-Get) IT!</h2>
+    </div>
+    <div class="col-sm">
+ <img class="xs-hidden" src="https://img-9gag-fun.9cache.com/photo/aXjQzVb_700bwp.webp" width="100%">
+    </div>
+  </div>
+  </div>
+</section>
 
-                Here at Comet Games Store, we are committed to giving you the best games possible, at the best prices
-                possible, with the best service possible.
-            </p>
-            <p>All of our items are purely DRM-free!</p>
-            <p>Sales every Wednesday and weekend!</p>
-            <p>Sales every 5th and 10th of the month!</p>
-            <p>Come down below and Get your favorite Video Games.</p>
-            <h2 class="text-danger" style="font-weight: 500;">COM-ET (Come-n-Get) IT!</h2>
-          </div>
-        </div>
-        <div class="col-mb-6 text-center h-100">
-          <div class="container-fluid h-100">
-            <img class="xs-hidden" src="https://img-9gag-fun.9cache.com/photo/aXjQzVb_700bwp.webp" width="500px">
-          </div>
-        </div>
-      </div>
-      </div>
-    </section>
  <!---This is Tuong section-->
   <section class="smith-section wrap">
 
@@ -148,7 +141,7 @@
           </div> 
         </div>
       </div>
-      <div class="carousel-item data-interval="3000">
+      <div class="carousel-item" data-interval="3000">
         <a class="trailer-link" href="https://www.youtube.com/watch?v=F1z6ubHowgA"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Kingdom-Come-Deliverance.jpg" style="height:100vh" alt="Second slide"></a>
         <div class="carousel-caption d-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
@@ -163,7 +156,7 @@
           </div> 
         </div>
       </div>
-      <div class="carousel-item data-interval="3000">
+      <div class="carousel-item" data-interval="3000">
         <a class="trailer-link" href="https://www.youtube.com/watch?v=j_JtczD-9Ko"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Streets-of-Rage-4.jpg" style="height:100vh" alt="Third slide"></a>
         <div class="carousel-caption d-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
@@ -178,7 +171,7 @@
           </div> 
         </div>
       </div>
-      <div class="carousel-item active data-interval="3000">
+      <div class="carousel-item active" data-interval="3000">
         <a class="trailer-link" href="https://www.youtube.com/watch?v=ZUmUoyS--5I"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/The-Surge-2.jpg" style="height:100vh" alt="Second slide"></a>
         <div class="carousel-caption d-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
@@ -193,7 +186,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item data-interval="3000">
+      <div class="carousel-item" data-interval="3000">
         <a class="trailer-link h-100" href="https://www.youtube.com/watch?v=7uYgpGbIMSs"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Pathfinder-Kingmaker.jpg" style="height:100vh" alt="Second slide"></a>
         <div class="carousel-caption d-block">
           <div class="card float-right" style="width: 18rem; background-color: rgba(255,255,255,0.9);
@@ -208,7 +201,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item data-interval="3000">
+      <div class="carousel-item" data-interval="3000">
         <a class="trailer-link" href="https://youtube.com/watch?v=XHrskkHf958"><img class="d-block w-100 img-responsive" src="img/Witcher-3-GOTY.jpg" style="height:100vh" alt="Second slide"></a>
         <div class="carousel-caption d-md-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
@@ -223,7 +216,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item data-interval="3000">
+      <div class="carousel-item" data-interval="3000">
         <a class="trailer-link" href="https://www.youtube.com/watch?v=PqwzIgp0Nk0"><img class="d-block w-100 img-responsive" src="img/X-Com 2.jpg" style="height:100vh" alt="Second slide"></a>
         <div class="carousel-caption d-md-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
