--- a/mainpage.html
+++ b/mainpage.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top round-lg" style="background-color: #161A21; opacity:0.9">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top round-lg" style="background-color: #161A21; opacity:0.9">
         <a class="navbar-brand border-right border-white" href="mainpage.html" style="padding-right: 20px">
             <!-- Caution: Max height of the navigation bar from Bootstrap is 68px.-->
             <img src="img/Comet_Games_Logo.png" alt="Comet Games" style="max-height: 35px; height: 100%; width: auto; margin: 0 auto; display: inline-block">
@@ -89,10 +89,11 @@
             placeholder="Search for your favorite games..." aria-label="Search">
         <button class="Alyssa-button Alyssa-gradient animate__animated animate__backInUp">Search!</button>
     </section>
+ <hr class="section-divider" style="border-top: 2px solid silver; width: 75%">
     <section class="Alyssa-sec2">
     <div class="container" style="margin: 0 auto;">
     <div class="row">
-    <div class="col-sm">
+    <div class="col-sm-12 col-md-6">
       <h1 class="Alyssa-bold">Like a Rising Comet!</h1>
       <h1 class="Alyssa-bold">Great Games at Great Prices!</h1>
       <p class="Alyssa-space">Video games are increasingly becoming a normality in our modern society. Video games push our reflexes, creativity, and thinking, and give us experiences that can hardly be found in our mundane lives.
@@ -102,20 +103,21 @@
       <p>Sales every Wednesday and weekend!</p>
       <p>Sales every 5th and 10th of the month!</p>
       <p>Come down below and Get your favorite Video Games.</p>
-      <h2 class="text-danger" style="font-weight: 500; display:flex; justify-content: center;">COM-ET (Come-n-Get) IT!</h2>
+      <h2 class="text-danger" style="font-weight: 500; font-style:initial; display:flex; justify-content: center;">COM-ET (Come-n-Get) IT!</h2>
     </div>
-    <div class="col-sm">
- <img class="xs-hidden" src="https://img-9gag-fun.9cache.com/photo/aXjQzVb_700bwp.webp" width="100%">
+    <div class="col-sm-12 col-md-6">
+ <img class="xs-hidden" src="https://img-9gag-fun.9cache.com/photo/aXjQzVb_700bwp.webp" style="max-width: 100%;height: auto">
     </div>
   </div>
   </div>
 </section>
-
+<hr class="section-divider" style="border-top: 2px solid silver; width: 75%">
  <!---This is Tuong section-->
-  <section class="smith-section wrap">
+  <section class="smith-section wrap" >
 
     <!--Carousel-->
-    <div id="CometCarousel" class="carousel slide carousel-slide cols-1" data-ride="carousel" style="height:100vh">
+    <div id="CometCarousel" class="carousel slide carousel-slide" data-ride="carousel">
+    <h2 class="Alyssa-bold text-white" style="color:white; margin:20px">Check out latest release!</h2>  
     <ol class="carousel-indicators">
       <li data-target="#CometCarousel" data-slide-to="0"></li>
       <li data-target="#CometCarousel" data-slide-to="1"></li>
@@ -127,8 +129,8 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item" data-interval="3000">
-        <a class="trailer-link" href="https://www.youtube.com/watch?v=Kq5KWLqUewc"><img  id="carousel-image" class="d-block w-100 img-responsive" style="height:100vh" src="img/Deus-Ex-Human-Revolution.jpg" alt="First slide"></a>
-        <div class="carousel-caption d-block">
+        <a class="trailer-link" href="https://www.youtube.com/watch?v=Kq5KWLqUewc"><img  id="carousel-image" class="d-block w-100 img-responsive" src="img/Deus-Ex-Human-Revolution.jpg" alt="First slide"></a>
+        <div class="carousel-caption d-none d-sm-block">
           <div class="card float-left h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
           box-shadow: 0 5px 15px rgba(0,0,0,0.4); color:black; z-index:1;">
             <div class="card-body">
@@ -142,8 +144,8 @@
         </div>
       </div>
       <div class="carousel-item" data-interval="3000">
-        <a class="trailer-link" href="https://www.youtube.com/watch?v=F1z6ubHowgA"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Kingdom-Come-Deliverance.jpg" style="height:100vh" alt="Second slide"></a>
-        <div class="carousel-caption d-block">
+        <a class="trailer-link" href="https://www.youtube.com/watch?v=F1z6ubHowgA"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Kingdom-Come-Deliverance.jpg" alt="Second slide"></a>
+        <div class="carousel-caption d-none d-sm-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
           box-shadow: 0 5px 15px rgba(0,0,0,0.4); color:black; z-index:1;">
             <div class="card-body">
@@ -157,8 +159,8 @@
         </div>
       </div>
       <div class="carousel-item" data-interval="3000">
-        <a class="trailer-link" href="https://www.youtube.com/watch?v=j_JtczD-9Ko"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Streets-of-Rage-4.jpg" style="height:100vh" alt="Third slide"></a>
-        <div class="carousel-caption d-block">
+        <a class="trailer-link" href="https://www.youtube.com/watch?v=j_JtczD-9Ko"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Streets-of-Rage-4.jpg" alt="Third slide"></a>
+        <div class="carousel-caption d-none d-sm-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
           box-shadow: 0 5px 15px rgba(0,0,0,0.4); color:black; z-index:1;">
             <div class="card-body">
@@ -172,8 +174,8 @@
         </div>
       </div>
       <div class="carousel-item active" data-interval="3000">
-        <a class="trailer-link" href="https://www.youtube.com/watch?v=ZUmUoyS--5I"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/The-Surge-2.jpg" style="height:100vh" alt="Second slide"></a>
-        <div class="carousel-caption d-block">
+        <a class="trailer-link" href="https://www.youtube.com/watch?v=ZUmUoyS--5I"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/The-Surge-2.jpg" alt="Second slide"></a>
+        <div class="carousel-caption d-none d-sm-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
           box-shadow: 0 5px 15px rgba(0,0,0,0.4); color:black; z-index:1;">
             <div class="card-body">
@@ -187,9 +189,9 @@
         </div>
       </div>
       <div class="carousel-item" data-interval="3000">
-        <a class="trailer-link h-100" href="https://www.youtube.com/watch?v=7uYgpGbIMSs"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Pathfinder-Kingmaker.jpg" style="height:100vh" alt="Second slide"></a>
-        <div class="carousel-caption d-block">
-          <div class="card float-right" style="width: 18rem; background-color: rgba(255,255,255,0.9);
+        <a class="trailer-link h-100" href="https://www.youtube.com/watch?v=7uYgpGbIMSs"><img id="carousel-image" class="d-block w-100 img-responsive" src="img/Pathfinder-Kingmaker.jpg" alt="Second slide"></a>
+        <div class="carousel-caption d-none d-sm-block">
+          <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
           box-shadow: 0 5px 15px rgba(0,0,0,0.4); color:black; z-index:1;">
             <div class="card-body">
               <h5 class="card-title" style="font-weight: bold;">Pathfinder: Kingmaker -<br> Enhanced Edition</h5>
@@ -202,8 +204,8 @@
         </div>
       </div>
       <div class="carousel-item" data-interval="3000">
-        <a class="trailer-link" href="https://youtube.com/watch?v=XHrskkHf958"><img class="d-block w-100 img-responsive" src="img/Witcher-3-GOTY.jpg" style="height:100vh" alt="Second slide"></a>
-        <div class="carousel-caption d-md-block">
+        <a class="trailer-link" href="https://youtube.com/watch?v=XHrskkHf958"><img class="d-block w-100 img-responsive" src="img/Witcher-3-GOTY.jpg" alt="Second slide"></a>
+        <div class="carousel-caption d-none d-sm-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
           box-shadow: 0 5px 15px rgba(0,0,0,0.4); color:black; z-index:1;">
             <div class="card-body">
@@ -217,8 +219,8 @@
         </div>
       </div>
       <div class="carousel-item" data-interval="3000">
-        <a class="trailer-link" href="https://www.youtube.com/watch?v=PqwzIgp0Nk0"><img class="d-block w-100 img-responsive" src="img/X-Com 2.jpg" style="height:100vh" alt="Second slide"></a>
-        <div class="carousel-caption d-md-block">
+        <a class="trailer-link" href="https://www.youtube.com/watch?v=PqwzIgp0Nk0"><img class="d-block w-100 img-responsive" src="img/X-Com 2.jpg"  alt="Second slide"></a>
+        <div class="carousel-caption  d-none d-sm-block">
           <div class="card float-right h-100" style="width: 18rem; background-color: rgba(255,255,255,0.9);
           box-shadow: 0 5px 15px rgba(0,0,0,0.4); color:black; z-index:1">
             <div class="card-body">
@@ -242,7 +244,7 @@
     </a>
   </div>
   <!--end of carousel-->
-
+<hr class="section-divider" style="border-top: 2px solid silver; width: 75%">
 
   <!--Old but Good Titles-->
 
@@ -315,7 +317,7 @@
        </div>
     </div>    
 <!--end of oldies but goodies-->
-
+<hr class="section-divider" style="border-top: 2px solid silver; width: 75%">
 
 <!--map section-->
 <div class="smith-container-map" style="margin:20px">
@@ -433,7 +435,7 @@
 <!--Section: Contact v.1-->
 </div>
 </section>
-    <nav class="fixed-bottom navbar navbar-expand-lg navbar-dark round-lg" style="background-color: #161A21;">
+    <nav class="navbar navbar-expand-lg navbar-dark round-lg" style="background-color: #161A21;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
